# rmt

./: .gitignore  CMakeLists.txt  README  asdf.z3  constrainedrewrite.cpp  constrainedrewrite.h  constrainedrewritesystem.cpp  constrainedrewritesystem.h  constrainedsolution.cpp  constrainedsolution.h  constrainedterm.cpp  constrainedterm.h  constraint.cpp  constraint.h  equiv.fot  example1.rmt  example10.rmt  example12.rmt  example14.rmt  example5.rmt  example6.rmt  factories.cpp  factories.h  fot-mode.el  function.h  funterm.cpp  funterm.h  gcd.rmt  gcd.z3  gcd1.rmt  gcd3.rmt  gcd5.rmt  gcdsent.rmt  gcdsimplenohelp.rmt  helper.cpp  helper.h  imp.fot  imp.rmt  log.cpp  log.h  (+56 more)
LDE_Comparison/: comparison.py  generate.py  ldelexmain.cpp  stressTest.py
emacs/: repl.el  rmt-mode.el
examples/: CMakeLists.txt  equiv.rmt  equiv1.rmt  equiv2.rmt  equiv3.rmt  equiv4.rmt  equiv5.rmt  equiv6.rmt  equiv7.rmt  example4.rmt  example4_p.rmt.out  example6.rmt  example7.rmt  example8.rmt  example9.rmt  examplefun1.rmt  examplefun2.rmt  examplefun3.rmt  examplefun4.rmt  examplefun5.rmt  exampleimp3.rmt  fsttcs1.rmt  fsttcs2.rmt  gcddef.rmt  imp.rmt  sum.rmt  test1.z3  total1.rmt  total11.rmt  total2.rmt  total3.rmt  total4.rmt  total5.rmt  total5_simplified.rmt  uf.rmt  z3_temp.input  zz_example1.rmt  zzzzz
examples/all-examples/: equiv4.rmt  equiv6.rmt  equiv8.rmt  esop-running-example.rmt  example11.rmt  example12.rmt  example4_p.rmt  example8.rmt  examplefun2.rmt  examplefun4.rmt  exampleimp2.rmt  gcd.rmt  gcd2.rmt  gcd4.rmt  test1.rmt
examples/equivalence/: equiv3.rmt  equiv5.rmt
examples/equivalence-new-examples/: fun-loop-flattening.rmt  fun-loop-interchange_attempt.rmt  fun-loop-skewing.rmt  fun-loop-tiling.rmt  fun-loop-tiling01.rmt
examples/equivalence-new-examples-generic/: fun-hoisting.rmt  fun-loop-fusion-S1.rmt  fun-loop-fusion-S2.rmt  fun-loop-tiling01.rmt  zout
examples/equivalence-submission/: example1_fun1_f_fa_partial.rmt  example1_fun1_f_fa_total.rmt  example1_fun1_fa_f_partial.rmt  example1_fun1_fa_f_total.rmt  example2_fun2_f_fa_partial.rmt  example2_fun2_f_fa_total.rmt  example2_fun2_fa_f_partial.rmt  example2_fun2_fa_f_total.rmt  example3_fun1_fun2_f_fa_partial.rmt  example3_fun2_fun1_F_f_partial.rmt  example4_fun1_while_miu.rmt  example5_fun1_ifwhile_whileif.rmt  fun-refactored-example-ifwhile.rmt  fun-refactored-example-sum-f-imp.rmt  fun-refactored-example.rmt  fun-refactored.rmt  fun-running-example-complete-partial.rmt  fun-running-example-simplified-2.rmt  fun-running-example-simplified-3-2.rmt  fun-running-example-simplified-3.rmt  fun-running-example-simplified-total.rmt  zout  zout.bak
examples/equivalence-submission-old/: zout2  zout_fa
examples/isr2019/: exercise1.rmt  exercise2.rmt  exercise3.rmt  exercise4.rmt  exercise5.rmt
examples/known-problems/: commutativity.rmt
examples/other-examples/: equiv2.rmt  equiv5.rmt  equiv9.rmt  example6.rmt  exampleimp1.rmt  gcdcomplex.rmt  gcdsimple.rmt  minus.rmt
examples/perr-2019/: accumulator-vs-nonacc-simplified-total.rmt
examples/submission-examples/: 00-running-example.rmt  01-example-sum-v1.rmt  01-example-sum-v2.rmt  01-example-sum-v3.rmt  01-example-sum-v4.rmt  01-example-sum-v5.rmt  02-gcd-subtractions-v1.rmt  03-gcd-divisions-v1.rmt  03-gcd-divisions-v2.rmt  04-multiplication-by-addition-v1.rmt  05-squares-v1.rmt  06-squares-v1.rmt  07-imp-v1.rmt  08-fun-v1.rmt  09-fun-v1.rmt
examples/termination/: 1.1_addition.rmt  1.2_addition_bad_variant.rmt  1.3_addition_variant.rmt  2.1_zune_partial.rmt  2.2_zune_total.rmt  2.3_zune_fixed.rmt  3.1_IMP_loop.rmt  3.2_IMP_sum.rmt  4.1-square-variant.rmt  5.1-inc-dec.rmt
examples/termination-examples/: 1.1_addition.rmt  2.1_zune_partial.rmt  2.2_zune_total.rmt  3.2_IMP_sum.rmt
examples/tests/: smt1.rmt  smt2.rmt
examples/total-correctness-examples/: a.py  example1.rmt  example1_2.rmt
examples/z-all-examples/: benchmark_accunify.rmt  example1.rmt  example10.rmt  example13.rmt  example2.rmt  example3.rmt  example4.rmt  example7.rmt  example8.rmt  example9.rmt  example_interactive.rmt  example_valeriu.rmt  examplecirctop.rmt  (+7 more)
experiments/: build_times.txt  implies.rmt
extras/: readme_termination.html
fastsrc/: CMakeLists.txt  abstract.cpp  constrainedterm.cpp  constrainedterm.h  defined.cpp  helper.cpp  helper.h  main.cpp  parse.cpp  parse.h  query.cpp  query.h  queryprovereachability.cpp  queryprovesim.cpp  querysearch.cpp  rewritesystem.cpp  rewritesystem.h  search.cpp  search.h  smallqueries.cpp  smallqueries.h  smtunify.cpp  smtunify.h
fastsrc/temp/: ldeslopesalg.cpp  queryprovesim.h
fastterm/: CMakeLists.txt  fastfunc.cpp  fastqueryacunify.cpp  fastsort.cpp  fastterm.cpp  fastterm.h  fastvar.cpp  fastz3.cpp  log.h  match.cpp  unif.cpp  unifeqsystem.h
fastterm-tests/: testft1.cpp  testft3.cpp
legacy-src/: CMakeLists.txt
src/: CMakeLists.txt  abstract.cpp  abstract.h  comparison.cpp  constrainedrewritesystem.cpp  constrainedrewritesystem.h  constrainedsolution.cpp  constrainedsolution.h  constrainedterm.cpp  constrainedterm.h  defined.h  factories.cpp  factories.h  function.h  funterm.cpp  funterm.h  helper.cpp  helper.h  ldealg.cpp  ldealg.h  ldecompalg.cpp  ldecompalg.h  ldegraphalg.cpp  ldegraphalg.h  ldelexalg.cpp  ldeslopesalg.cpp  log.cpp  main.cpp  parse.cpp  parse.h  query.cpp  queryaccunify.cpp  queryacsunify.cpp  queryacunify.cpp  queryacunify.h  queryacuunify.cpp  querycirc.cpp  querycunify.cpp  querydefinedsearch.cpp  querydefinedsearch.h  (+41 more)
src/LDE_Comparison/: comparison.cpp  comparison.py  generate.py  ldecompmain.cpp  ldegraphmain.cpp  slopesV7i.c  stessTestCompGraph.py  stressTest.py  test4.txt  test8.txt  testGenerator.py  tests.txt  timer.h
src/fastterm/: CMakeLists.txt  fastfunc.cpp  fastqueryacunify.cpp  fastqueryacunify.h  fastsort.cpp  fastsubst.cpp  fastterm.c  fastterm.cpp  fastterm.h  fastvar.cpp  fastz3.cpp  ldelexalg.cpp  match.cpp  test2.c  testft1.cpp  testft2.cpp  testft3.cpp  unif.cpp  unifeq.cpp  unifeqsystem.cpp  unifeqsystem.h
src/temp/: z3driver.cpp
webpage/: index.html  my.css  upload.sh
(+106 files in other folders)
